--- a/index.html
+++ b/index.html
@@ -4,9 +4,36 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="hell.js" />
+    <style>
+      body {
+        background-color: rgb(151, 138, 138);
+      }
+      h1 {
+        text-align: center;
+        color: rgb(17, 53, 18);
+      }
+      label {
+        padding: 10px;
+        margin: 10px;
+      }
+      button {
+        color: tomato;
+      }
+      button:hover {
+        color: cornflowerblue;
+      }
+    </style>
   </head>
   <body>
-    <h1>HEllo</h1>
+    <h1>student college form</h1>
+    <label for="full name">Full Name:</label>
+    <input type="text" placeholder="Enter Your Name" /><br />
+    <label for="Roll No">Roll No: </label>
+    <input type="text" placeholder="Enter Your Roll NO" /><br />
+    <label for="Email">Email:</label>
+    <input type="text" placeholder="Enter Your Email" /><br />
+    <label for="Stream">Stream</label>
+    <input type="text" placeholder="Enter Your Stream" />
+    <button>Submit</button>
   </body>
 </html>
