--- a/more.html
+++ b/more.html
@@ -16,7 +16,8 @@
       Multiuser access is made easier with a client/server model.We obviously
       want this. We also need simultaneous reading and writing of the same
       database. This is done by locking parts or all of the database while they
-      are updated. One has to decide on the unit of data to be locked. I ( TBL )
+      are updated. One has to decide on the unit of data to be locked. I
+      <a href="tbl.html">( TBL )</a>
       imagine that it would be a node, not a database.
       <br />
       <br />
@@ -56,7 +57,7 @@
       aware of the domain into which he was writing. One could use a server per
       domain, but could imagine the need for more than one server per domain, or
       more than one domain per server. <br /><br />
-      See also: Generic Linking
+      See also: <a href="generic.html">Generic Linking</a>
     </p>
     <h2>Locking and modifying</h2>
     Modification of text in a multiuser environment requires in principle some
